--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.15, 1.16, 1.17]
-        # TODO: enable macos-10.15
-        os: [ubuntu-18.04, ubuntu-20.04, macos-11, windows-2019, windows-2022]
+        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, macos-11, windows-2019, windows-2022]
     runs-on: ${{ matrix.os }}
 
     steps:
