--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.17, 1.18, 1.19]
-        os: [ubuntu-18.04, ubuntu-20.04, macos-11, macos-12, windows-2019, windows-2022]
+        os: [uubuntu-20.04, ubuntu-22.04, macos-11, macos-12, windows-2019, windows-2022]
     runs-on: ${{ matrix.os }}
 
     steps:
